# personio-foundation-coachai

./: .env.example  .gitignore  .pre-commit-config.yaml  COMMERCIAL_LICENSE_AGREEMENT.txt  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CORS  Dockerfile  PostgreSQL  README.md  audio-processor.js  audio_utils.sh  config.py  database.py  db_init.py  dependencies.py  fly-dev.toml  fly.dev.toml  fly.toml  main.py  populate_dummy_data.py  prisma_client.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  testfile_gcs_integration2.txt  webrtc-test.html  webrtc-test.js
backend/alembic/: README  env.py  script.py.mako
backend/alembic/data/: 2025_06_17_1054-ccbf2a5fb6a6_initial_migration.sql
backend/alembic/versions/: 2025_06_03_1519-9884cb2c02a9_initial_schema.py  2025_06_06_1739-92ae6c83f8a8_initial_db_schema.py  2025_06_17_1054-ccbf2a5fb6a6_initial_migration.py  2025_06_20_0012-0a10f61dc9c7_split_db_model_and_pydantic_schemas_and_.py  2025_06_25_0045-92a5ad9d1a57_add_allow_admin_access_to_review.py  2025_06_25_2132-ad0abf669301_added_a_new_field_to_the_userprofile_.py  2025_06_25_2335-54d72c3444d6_move_allow_admin_access_to_session.py  2025_06_27_1632-a131a5542baa_replace_average_score_with_score_sum_in_.py  2025_06_28_1152-7968f3435129_merge_heads.py  2025_06_29_1754-52523a841222_.py  2025_06_29_1757-d2dab6bb11ac_merging_alembic_heads.py  2025_06_30_0056-13d3f30289dc_adjust_training_context_fields_in_.py  2025_06_30_1239-2ec9cbc6c3f2_delete_ai_persona_in_session.py  2025_06_30_2133-effa95c38794_change_overall_score_to_float_in_.py  2025_06_30_2329-d3ba5c881bc7_delete_unused_fields_in_conversation_.py  2025_07_02_1421-24eaf11003f7_merged_alembic_with_dev.py  2025_07_02_1421-d74599307cf1_.py  2025_07_02_1749-96c80a88a4d6_merge_heads.py  2025_07_03_1844-7718ddcf9e37_change_make_ai_emotion_to_optional.py  2025_07_03_2106-a93e502a5d3a_merge_heads.py  2025_07_05_1545-8b0f8f5f8fc1_.py  2025_07_05_1547-6228e2d29828_merged_alembic_head.py  2025_07_05_1657-a0f89cb0a15d_added_last_loggin_at_field_to_user_.py  2025_07_06_0108-8a93adb2c71f_just_triggering_husky.py  2025_07_06_1205-fd649120d5a9_add_custom_claims.py  2025_07_06_1804-b2117ff73279_add_full_audio_filename_and_full_audio_.py  2025_07_07_2021-03f53ff9f076_document_names_in_prep_and_feedback_.py  2025_07_07_2300-148e20e323fa_add_custom_claims.py  2025_07_09_1005-e020361b8b9f_implement_live_feedback.py  2025_07_09_1652-a1e923719659_added_last_logged_in_field_to_user_.py  2025_07_09_1807-79cce3e613d2_implement_live_feedback.py  2025_07_09_1957-e02cc4b53875_just_triggering_cicd.py  2025_07_10_0233-f74c5f1db78b_supabase_setup.py  2025_07_10_2107-3dfcba1ec486_on_delete_cascade_live_feedback.py  2025_07_11_1759-d7de33b1ffc0_enums_refactoring.py  2025_07_11_1810-693b8be60c1e_enums_refactoring.py  2025_07_12_1301-35e6776e0add_add_persona_name_to_conversation_.py  2025_07_13_0120-802e479cfac2_deleted_transcript_uri_in_session_.py  2025_07_13_0914-fc2c3d9c6394_supabase_setup.py  2025_07_13_1556-47073b70baec_add_persona_name_to_conversation_.py  (+7 more)
backend/app/: .env.example  .gitignore  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/connections/: gcs_client.py  gemini_client.py  gemnini_client.py  openai_client.py  vertexai_client.py
backend/app/data/: __init__.py  conversation_rubric.json  conversation_scenario_context.json  default_contexts.json  dummy_conversation_assistant_bad.json  dummy_conversation_for_testing.json  dummy_conversation_good_example.json  dummy_conversation_low_clarity.json  dummy_conversation_low_clarity_structure.json  dummy_data.py  test.md  (+15 more)
backend/connections/: gemini_client.py  openai_client.py
backend/data/: __init__.py  dummy_data.py  populate_dummy_data.py
backend/demo/: LICENSE  README.md  api.py  gemini_client.py  model_gemini.py  proxy.py  requirements.txt
backend/models/: __init__.py  confidence_area.py  conversation_category.py  conversation_category_model.py  conversation_turn.py  conversation_turn_model.py  difficulty_level.py  experience.py  goal.py  hr_information.py  language.py  language_model.py  learning_style.py  message_model.py  personalization_option.py  rating.py  rating_model.py  reviews.py  role.py  scenario_template.py  scenario_template_model.py  session_length.py  training_case.py  training_case_model.py  training_preparation.py  training_preparation_model.py  training_session.py  training_session_feedback.py  training_session_feedback_model.py  training_session_model.py  training_sessions_paginated.py  user_confidence_score.py  user_feedback.py  user_goal.py  user_profile.py  user_profile_model.py
backend/prisma/: schema.prisma
backend/rag/: clients.py  db_retrival.py  embeddings.py  gemini_client.py  match_function.sql  rag.py  rag_chain.py  vector_db.py  vectorstore.py
backend/routers/: admin_dashboard_stats_route.py  app_config_route.py  confidence_area_route.py  conversation_category_route.py  conversation_turn_route.py  goal_route.py  language_route.py  learning_style_route.py  messages_route.py  personalization_options_route.py  rating_route.py  reviews_route.py  scenario_template_route.py  session_length_route.py  training_case_route.py  training_preparation_route.py  training_session_feedback_route.py  training_session_route.py  training_sessions_paginated_route.py  twilio_route.py  user_confidence_score_route.py  user_feedback_route.py  user_goals_route.py  user_profile_route.py  user_profile_stats_route.py  users_route.py  webrtc_signal_route.py
backend/schemas/: __init__.py  message_schema.py  training_feedback_schema.py  training_preparation_schema.py  traning_preparation_schema.py  webrtc_schema.py
backend/services/: TEST.py  audio_service.py  initial_voice_context.py  input_conversation.json  real_time_feedback_service.py  scenarios.json  training_case_service.py  training_feedback_service.py  training_preparation_service.py  twilio_service.py  webrtc_service.py  websocket_service.py
backend/tests/: mock_test.py
(+874 files in other folders)
