[project]
name = "coachAI-backend"
version = "0.1.0"
description = "A smart, voice-based training app for HR professionals to master difficult conversations through guided preparation, realistic simulations, and actionable feedback"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
  "fastapi[standard]>=0.112.1",
  "sqlalchemy>=2.0.22",
  "pydantic>=2.4.2",
  "pydantic-settings>=2.0.3",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.16.1",
  "python-jose>=3.3.0",
  "passlib>=1.7.4",
  "python-multipart>=0.0.6",
  "pre-commit>=4.2.0",
  "sqlmodel>=0.0.24",
  "twilio>=8.12.0",
  "python-dotenv>=1.0.0",
  "psycopg2-binary>=2.9.10",
  "openai>=1.81.0",
  "langchain>=0.3.25",
  "langchain-community>0.3.20",
  "langchain-google-genai>=2.0.10",
  "google-generativeai>=0.8.5",
  "pypdf>=5.4.0",
  "pgvector>=0.2.5,<0.4",
  "langchain-openai>=0.3.21",
  "google-genai>=1.19.0",
  "pyjwt>=2.10.1",
  "supabase>=2.16.0",
]

[tool.setuptools]
packages = [
  "rag",
  "data",
  "models",
  "routers",
  "schemas",
  "services",
  "connections",
]


[dependency-groups]
dev = [
  "ruff>=0.11.9",
  "pre-commit>=4.2.0",
  "pytest",
  "pytest-asyncio",
  "pytest-postgresql",
  "httpx",
  "respx",
  "deptry>=0.23.0",
]

lint = ["ruff"]
